@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <settings version="1">
   <section id="import" label="32010">
+    <category id="sync" label="39530">
+      <group id="1">
+        <setting id="emby.forcesync" type="action" label="32042">
+          <level>0</level>
+          <control type="button" format="action" />
+        </setting>
+      </group>
+    </category>
     <category id="library" label="32024">
       <group id="1">
         <setting id="emby.importviews" type="string" label="32020">
